# minework

./: .build.yml  Cargo.toml  README.md  flake.nix
src/: cli.rs  config.rs  main.rs  utils.rs
src/cli/: completion.rs  profile.rs
src/cli/profile/: create.rs  delete.rs  info.rs  list.rs  utils.rs
src/utils/: validators.rs
src/utils/validators/: inquire_validators.rs
